feat(builder): added getPersonalModule endpoint
